--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "foxtrot",
-    "version": "1.7.0",
+    "version": "1.8.0",
     "private": true,
     "scripts": {
-        "android": "react-native run-android",
+        "android": "react-native run-android --active-arch-only",
         "log-android": "react-native log-android",
         "ios": "react-native run-ios",
         "start": "react-native start",
