--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "react-native-reanimated": "^2.14.4",
         "react-native-safe-area-context": "^3.1.9",
         "react-native-screens": "^3.17.0",
+        "react-native-sodium": "^0.4.0",
         "react-native-svg": "^13.1.0",
         "react-native-toast-message": "^2.1.6",
         "react-native-vector-icons": "^9.2.0",
