--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-native-fontawesome": "^0.3.0",
         "@react-native-async-storage/async-storage": "^1.17.12",
+        "@react-native-clipboard/clipboard": "^1.11.2",
         "@react-native-community/toolbar-android": "^0.2.1",
         "@react-native-firebase/app": "^15.4.0",
         "@react-native-firebase/messaging": "^15.4.0",
@@ -52,7 +53,7 @@
         "react-native-vector-icons": "^9.2.0",
         "react-native-vision-camera": "^2.15.4",
         "react-native-webrtc": "^106.0.7",
-        "react-native-webview": "^11.26.1",
+        "react-native-webview": "^12.1.0",
         "react-native-webview-crypto": "^0.0.25",
         "react-redux": "^7.2.9",
         "redux-thunk": "^2.4.2"
