--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "30.0.2"
-        minSdkVersion = 24
+        buildToolsVersion = "31.0.0"
+        minSdkVersion = 21
         compileSdkVersion = 31
         targetSdkVersion = 31
 
@@ -16,33 +16,21 @@ buildscript {
         }
     }
     repositories {
-        google()  // Google's Maven repository
-        mavenCentral()  // Maven Central repository
-        jcenter()
+        google()
+        mavenCentral()
     }
     dependencies {
         classpath("com.android.tools.build:gradle:7.2.1")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:5.0.1")
-
-        classpath('com.google.gms:google-services:+')
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath('com.google.gms:google-services:4.3.15')
     }
 }
 
-def REACT_NATIVE_VERSION = new File(['node', '--print',"JSON.parse(require('fs').readFileSync(require.resolve('react-native/package.json'), 'utf-8')).version"].execute(null, rootDir).text.trim())
-
 allprojects {
-    configurations.all {
-        resolutionStrategy {
-            force "com.facebook.react:react-native:" + REACT_NATIVE_VERSION
-        }
-    }
-    
     repositories {
-        mavenLocal()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
@@ -51,10 +39,14 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
-
-        google()  // Google's Maven repository
-        mavenCentral()  // Maven Central repository
-        jcenter()
-        maven { url 'https://jitpack.io' }
+        mavenCentral {
+            // We don't want to fetch react-native from Maven Central as there are
+            // older versions over there.
+            content {
+                excludeGroup "com.facebook.react"
+            }
+        }
+        google()
+        maven { url 'https://www.jitpack.io' }
     }
 }
