--- a/package.json
+++ b/package.json
@@ -1,80 +1,74 @@
 {
-    "name": "foxtrot",
-    "version": "1.9.0",
-    "private": true,
-    "scripts": {
-        "android": "react-native run-android --active-arch-only",
-        "log-android": "react-native log-android",
-        "ios": "react-native run-ios",
-        "start": "react-native start",
-        "test": "jest",
-        "lint": "eslint .",
-        "build-android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res"
-    },
-    "dependencies": {
-        "@fortawesome/fontawesome-common-types": "^6.2.1",
-        "@fortawesome/fontawesome-svg-core": "^6.2.1",
-        "@fortawesome/free-brands-svg-icons": "^6.2.1",
-        "@fortawesome/free-solid-svg-icons": "^6.2.1",
-        "@fortawesome/react-native-fontawesome": "^0.3.0",
-        "@react-native-async-storage/async-storage": "^1.17.12",
-        "@react-native-clipboard/clipboard": "^1.11.2",
-        "@react-native-community/toolbar-android": "^0.2.1",
-        "@react-native-firebase/app": "^15.4.0",
-        "@react-native-firebase/messaging": "^15.4.0",
-        "@react-navigation/drawer": "^6.4.4",
-        "@react-navigation/native": "^6.0.16",
-        "@react-navigation/stack": "^6.2.3",
-        "@shopify/flash-list": "^1.4.3",
-        "axios": "^0.27.2",
-        "buffer": "^6.0.3",
-        "expo": "^46.0.21",
-        "expo-local-authentication": "~12.3.0",
-        "react": "^18.1.0",
-        "react-native": "^0.70.10",
-        "react-native-document-picker": "^8.1.4",
-        "react-native-elements": "^3.4.3",
-        "react-native-fs": "^2.20.0",
-        "react-native-full-screen-notification-incoming-call": "^0.1.12",
-        "react-native-gesture-handler": "^2.6.2",
-        "react-native-get-random-values": "^1.8.0",
-        "react-native-incall-manager": "^4.0.1",
-        "react-native-keychain": "^8.1.1",
-        "react-native-paper": "^4.12.5",
-        "react-native-push-notification": "^8.1.1",
-        "react-native-quick-base64": "^2.0.6",
-        "react-native-randombytes": "^3.6.1",
-        "react-native-reanimated": "^2.14.4",
-        "react-native-safe-area-context": "^3.1.9",
-        "react-native-screens": "^3.17.0",
-        "react-native-svg": "^13.1.0",
-        "react-native-toast-message": "^2.1.6",
-        "react-native-vector-icons": "^9.2.0",
-        "react-native-vision-camera": "^2.15.4",
-        "react-native-webrtc": "^106.0.7",
-        "react-native-webview": "^12.1.0",
-        "react-native-webview-crypto": "^0.0.25",
-        "react-redux": "^7.2.9",
-        "redux-thunk": "^2.4.2"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.14.8",
-        "@babel/runtime": "^7.14.8",
-        "@react-native-community/eslint-config": "^3.1.0",
-        "@tsconfig/react-native": "^2.0.3",
-        "@types/node": "^18.11.19",
-        "@types/react": "^18.0.38",
-        "@types/react-native": "^0.70.14",
-        "@types/react-native-incall-manager": "^3.2.1",
-        "@types/react-native-push-notification": "^8.1.1",
-        "@types/react-native-webrtc": "^1.75.5",
-        "@types/react-redux": "^7.1.25",
-        "babel-plugin-root-import": "^6.6.0",
-        "eslint": "^8.32.0",
-        "metro-react-native-babel-preset": "^0.72.4",
-        "typescript": "^4.9.5"
-    },
-    "jest": {
-        "preset": "react-native"
-    }
+  "name": "foxtrot",
+  "version": "1.9.0",
+  "private": true,
+  "scripts": {
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-common-types": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-clipboard/clipboard": "^1.11.2",
+    "@react-native-community/toolbar-android": "^0.2.1",
+    "@react-native-firebase/app": "^18.1.0",
+    "@react-native-firebase/messaging": "^18.1.0",
+    "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
+    "@shopify/flash-list": "^1.4.3",
+    "axios": "^1.4.0",
+    "buffer": "^6.0.3",
+    "expo": "^48.0.19",
+    "expo-local-authentication": "~13.3.0",
+    "react": "18.1.0",
+    "react-native": "0.70.10",
+    "react-native-document-picker": "^9.0.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
+    "react-native-full-screen-notification-incoming-call": "^0.1.12",
+    "react-native-gesture-handler": "^2.6.2",
+    "react-native-get-random-values": "^1.9.0",
+    "react-native-incall-manager": "^4.0.1",
+    "react-native-keychain": "^8.1.1",
+    "react-native-paper": "^4.12.5",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-quick-base64": "^2.0.6",
+    "react-native-randombytes": "^3.6.1",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "^3.22.0",
+    "react-native-svg": "^13.9.0",
+    "react-native-toast-message": "^2.1.6",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-vision-camera": "^2.15.4",
+    "react-native-webrtc": "^111.0.1",
+    "react-native-webview": "^13.2.2",
+    "react-native-webview-crypto": "^0.0.25",
+    "react-redux": "^8.1.1",
+    "redux-thunk": "^2.4.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/node": "^20.3.2",
+    "@types/react": "^18.2.14",
+    "@types/react-native": "^0.72.2",
+    "@types/react-native-incall-manager": "^3.2.1",
+    "@types/react-native-push-notification": "^8.1.1",
+    "@types/react-native-webrtc": "^1.75.5",
+    "@types/react-redux": "^7.1.25",
+    "babel-plugin-root-import": "^6.6.0",
+    "eslint": "^7.32.0",
+    "metro-react-native-babel-preset": "0.72.3",
+    "typescript": "^4.9.5"
+  }
 }
