--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "@tsconfig/react-native/tsconfig.json",
     "compilerOptions": {
-        "target": "es6",
+        "target": "esnext",
         "baseUrl": ".",
         "paths": {
           "~/*": ["src/*"]
