--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,74 +22,25 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
-      android:icon="@mipmap/foxtrot"
+      android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
-      android:theme="@style/AppTheme"
-      android:requestLegacyExternalStorage="true">
+      android:theme="@style/AppTheme">
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+        android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
+        android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize"
-        android:exported="true" >
+        android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
-      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-
-        <meta-data android:name="google_analytics_adid_collection_enabled" android:value="false" />
-        <meta-data android:name="com.dieam.reactnativepushnotification.notification_channel_name" android:value="NotifcationDemo"/>
-        <meta-data android:name="com.dieam.reactnativepushnotification.notification_channel_description" android:value="NotifcationDemo Notifications"/>
-        <!-- Change the resource name to your App's accent color - or any other color you want -->
-        <meta-data android:name="com.dieam.reactnativepushnotification.notification_color" android:resource="@android:color/black"/>
-
-        <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationActions" android:exported="false"/>
-        <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationPublisher" android:exported="false"/>
-        <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver" android:exported="false">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
-                <action android:name="com.htc.intent.action.QUICKBOOT_POWERON"/>
-            </intent-filter>
-        </receiver>
-
-        <service android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationListenerService" android:exported="false" >
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
-
-
-        <!-- Call Screen stuff -->
-        <activity android:name="com.reactnativefullscreennotificationincomingcall.IncomingCallActivity"
-          android:theme="@style/incomingCall"
-          android:launchMode="singleTask"
-          android:excludeFromRecents="true"
-          android:exported="true"
-          android:showWhenLocked="true"
-          android:turnScreenOn="true"
-        />
-        <activity android:name="com.reactnativefullscreennotificationincomingcall.NotificationReceiverActivity"
-          android:theme="@style/incomingCall"
-          android:launchMode="singleTask"
-          android:excludeFromRecents="true"
-          android:exported="true"
-          android:showWhenLocked="true"
-          android:turnScreenOn="true"
-        />
-        <service
-          android:name="com.reactnativefullscreennotificationincomingcall.IncomingCallService"
-          android:enabled="true"
-          android:stopWithTask="false"
-          android:exported="true" 
-        />
-
     </application>
-
 </manifest>
