--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,12 +17,14 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
-    
+    <uses-permission android:name="android.permission.BLUETOOTH" android:maxSdkVersion="30" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" android:maxSdkVersion="30" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -43,5 +45,28 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+
+      <activity android:name="com.reactnativefullscreennotificationincomingcall.IncomingCallActivity"
+        android:theme="@style/incomingCall"
+        android:launchMode="singleTask"
+        android:excludeFromRecents="true"
+        android:exported="true"
+        android:showWhenLocked="true"
+        android:turnScreenOn="true"
+        />
+        <activity android:name="com.reactnativefullscreennotificationincomingcall.NotificationReceiverActivity"
+        android:theme="@style/incomingCall"
+        android:launchMode="singleTask"
+        android:excludeFromRecents="true"
+        android:exported="true"
+        android:showWhenLocked="true"
+        android:turnScreenOn="true"
+        />
+         <service
+         android:name="com.reactnativefullscreennotificationincomingcall.IncomingCallService"
+         android:enabled="true"
+         android:stopWithTask="false"
+         android:exported="true" />
+         
     </application>
 </manifest>
