--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foxtrot",
-  "version": "1.10.2",
+  "version": "1.10.3",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -44,6 +44,7 @@
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.9.0",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
