--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.18",
     "@types/react-native": "^0.72.2",
+    "@types/react-native-get-random-values": "^1.8.2",
     "@types/react-native-incall-manager": "^3.2.1",
     "@types/react-native-push-notification": "^8.1.4",
     "@types/react-native-webrtc": "^1.75.9",
