--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-full-screen-notification-incoming-call": "^0.1.12",
     "react-native-gesture-handler": "^2.6.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-image-picker": "^7.1.1",
     "react-native-incall-manager": "^4.0.1",
     "react-native-keychain": "^8.2.0",
     "react-native-paper": "^4.12.8",
