--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -38,3 +38,5 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
 newArchEnabled=false
+
+AsyncStorage_db_size_in_MB=20
