--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "start": "react-native start"
   },
   "dependencies": {
     "@fortawesome/fontawesome-common-types": "^6.4.2",
@@ -15,64 +15,70 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@likashefqet/react-native-image-zoom": "^2.2.0",
-    "@react-native-async-storage/async-storage": "^1.18.2",
-    "@react-native-clipboard/clipboard": "^1.11.2",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-clipboard/clipboard": "^1.16.0",
     "@react-native-community/toolbar-android": "^0.2.1",
+    "@react-native-documents/picker": "^10.1.5",
     "@react-native-firebase/app": "^18.1.0",
     "@react-native-firebase/messaging": "^18.1.0",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.3.29",
+    "@react-navigation/stack": "^6.4.1",
     "@shopify/flash-list": "^1.6.4",
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
-    "expo": "^48.0.21",
-    "expo-local-authentication": "~13.8.0",
-    "react": "18.1.0",
-    "react-native": "0.70.15",
-    "react-native-document-picker": "^9.1.2",
+    "react": "18.3.1",
+    "react-native": "^0.77.0",
     "react-native-elements": "^3.4.3",
-    "react-native-fs": "^2.20.0",
-    "react-native-full-screen-notification-incoming-call": "^0.1.12",
-    "react-native-gesture-handler": "^2.6.2",
+    "react-native-fs": "^2.18.0",
+    "react-native-full-screen-notification-incoming-call": "^1.1.0",
+    "react-native-gesture-handler": "^2.22.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-incall-manager": "^4.0.1",
     "react-native-keychain": "^8.2.0",
-    "react-native-paper": "^4.12.8",
+    "react-native-paper": "^5.14.5",
     "react-native-push-notification": "^8.1.1",
     "react-native-quick-base64": "^2.0.8",
     "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "^2.14.4",
-    "react-native-safe-area-context": "^4.6.4",
-    "react-native-screens": "^3.22.1",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.5.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "^15.11.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-vision-camera": "^2.16.8",
-    "react-native-webrtc": "^111.0.6",
-    "react-native-webview": "^13.8.7",
+    "react-native-vision-camera": "^4.7.1",
+    "react-native-webrtc": "^124.0.6",
+    "react-native-webview": "^13.14.1",
     "react-native-webview-crypto": "^0.0.26",
     "react-redux": "^8.1.3",
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.17",
-    "@babel/runtime": "^7.12.18",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@tsconfig/react-native": "^3.0.5",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "^15.0.1",
+    "@react-native-community/cli-platform-android": "^15.0.1",
+    "@react-native-community/cli-platform-ios": "^15.0.1",
+    "@react-native/babel-preset": "^0.77.0",
+    "@react-native/eslint-config": "0.77.3",
+    "@react-native/metro-config": "^0.77.0",
+    "@react-native/typescript-config": "0.77.3",
+    "@types/jest": "^29.5.13",
     "@types/node": "^20.3.3",
-    "@types/react": "^18.2.79",
-    "@types/react-native": "^0.72.8",
+    "@types/react": "^18.2.6",
     "@types/react-native-get-random-values": "^1.8.2",
     "@types/react-native-incall-manager": "^3.2.1",
     "@types/react-native-push-notification": "^8.1.4",
-    "@types/react-native-webrtc": "^1.75.9",
     "@types/react-redux": "^7.1.33",
-    "babel-plugin-root-import": "^6.6.0",
-    "eslint": "^7.32.0",
-    "metro-react-native-babel-preset": "0.72.4",
-    "typescript": "^4.9.5"
+    "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^8.19.0",
+    "prettier": "2.8.8",
+    "typescript": "5.0.4"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
