--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,7 +16,7 @@ buildscript {
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
         // Push Notifications
-        classpath('com.google.gms:google-services:4.3.15')
+        classpath('com.google.gms:google-services:4.4.0')//4.3.15')
     }
 }
 
