--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "resolvePackageJsonExports": false,
     "target": "esnext",
     "baseUrl": "./src",
     "paths": {
