--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
   "dependencies": {
     "@likashefqet/react-native-image-zoom": "^2.2.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-clipboard/clipboard": "^1.16.3",
+    "@react-native-clipboard/clipboard": "^1.16.0",
     "@react-native-community/toolbar-android": "^0.2.1",
     "@react-native-documents/picker": "^10.1.7",
     "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/messaging": "^22.4.0",
     "@react-native-vector-icons/material-design-icons": "^12.3.0",
-    "@react-navigation/drawer": "^6.6.15",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
+    "@react-navigation/drawer": "^7.7.2",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/stack": "^7.4.2",
+    "@reduxjs/toolkit": "^2.10.1",
     "@shopify/flash-list": "^1.6.4",
     "axios": "^1.13.2",
     "buffer": "^6.0.3",
-    "react": "18.3.1",
-    "react-native": "^0.77.3",
+    "react": "19.0.0",
+    "react-native": "^0.78.0",
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.18.0",
     "react-native-full-screen-notification-incoming-call": "^1.1.0",
-    "react-native-gesture-handler": "^2.27.2",
+    "react-native-gesture-handler": "^2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^7.1.5",
     "react-native-incall-manager": "^4.0.1",
@@ -37,18 +38,18 @@
     "react-native-push-notification": "^8.1.1",
     "react-native-quick-base64": "^2.0.8",
     "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "^5.1.0",
-    "react-native-screens": "^4.5.0",
+    "react-native-reanimated": "^3.17.0",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.10.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.3.3",
     "react-native-vision-camera": "^4.7.2",
     "react-native-webrtc": "^124.0.7",
-    "react-native-webview": "^13.14.2",
+    "react-native-webview": "^13.14.1",
     "react-native-webview-crypto": "^0.0.27",
-    "react-redux": "^8.1.3",
-    "redux-thunk": "^2.4.2"
+    "react-redux": "^9.2.0",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.9",
@@ -57,12 +58,12 @@
     "@react-native-community/cli": "^15.0.1",
     "@react-native-community/cli-platform-android": "^15.0.1",
     "@react-native-community/cli-platform-ios": "^15.0.1",
-    "@react-native/babel-preset": "^0.77.3",
-    "@react-native/eslint-config": "0.77.3",
-    "@react-native/metro-config": "^0.77.3",
-    "@react-native/typescript-config": "0.77.3",
+    "@react-native/babel-preset": "^0.78.0",
+    "@react-native/eslint-config": "0.78.0",
+    "@react-native/metro-config": "^0.78.0",
+    "@react-native/typescript-config": "0.78.0",
     "@types/node": "^22.19.0",
-    "@types/react": "^18.3.26",
+    "@types/react": "^19.0.0",
     "@types/react-native-get-random-values": "^1.8.2",
     "@types/react-native-incall-manager": "^3.2.1",
     "@types/react-native-push-notification": "^8.1.4",
