--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/foxtrot"
-      android:roundIcon="@mipmap/ic_launcher_round"
+      android:roundIcon="@mipmap/foxtrot"
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:requestLegacyExternalStorage="true">
