--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-native-image-picker": "^7.1.5",
     "react-native-incall-manager": "^4.2.1",
     "react-native-keychain": "^10.0.0",
+    "react-native-nitro-modules": "^0.31.10",
+    "react-native-nitro-sound": "^0.2.10",
     "react-native-paper": "^5.14.5",
     "react-native-push-notification": "^8.1.1",
     "react-native-quick-base64": "^2.0.8",
