--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-paper": "^5.14.5",
     "react-native-push-notification": "^8.1.1",
     "react-native-quick-base64": "^2.0.8",
+    "react-native-quick-crypto": "^1.0.6",
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.0",
