--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start"
+    "start": "react-native start",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@likashefqet/react-native-image-zoom": "^4.3.0",
@@ -52,6 +55,7 @@
   "devDependencies": {
     "@babel/core": "~7.25.9",
     "@babel/preset-env": "~7.25.9",
+    "@babel/preset-typescript": "^7.28.5",
     "@babel/runtime": "~7.28.6",
     "@react-native-community/cli": "~19.1.2",
     "@react-native-community/cli-platform-android": "~19.1.2",
@@ -60,13 +64,17 @@
     "@react-native/eslint-config": "~0.80.0",
     "@react-native/metro-config": "~0.80.0",
     "@react-native/typescript-config": "~0.80.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "~24.1.0",
     "@types/react": "~19.1.0",
     "@types/react-native-push-notification": "^8.1.4",
     "@types/react-redux": "~7.1.34",
+    "babel-jest": "^30.2.0",
     "babel-plugin-module-resolver": "~5.0.2",
     "eslint": "^8.19.0",
+    "jest": "^30.2.0",
     "prettier": "~2.8.8",
+    "ts-jest": "^29.4.6",
     "typescript": "~5.9.3"
   },
   "engines": {
