--- a/package.json
+++ b/package.json
@@ -70,11 +70,13 @@
         "@types/react": "~19.1.0",
         "@types/react-native-push-notification": "^8.1.4",
         "@types/react-redux": "~7.1.34",
+        "@types/sql.js": "^1.4.9",
         "babel-jest": "^30.2.0",
         "babel-plugin-module-resolver": "~5.0.2",
         "eslint": "^8.19.0",
         "jest": "^30.2.0",
         "prettier": "~2.8.8",
+        "sql.js": "^1.13.0",
         "ts-jest": "^29.4.6",
         "typescript": "~5.9.3"
     },
