--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "android": "react-native run-android",
         "ios": "react-native run-ios",
-        "lint": "eslint .",
+        "lint": "prettier --write \"src/**/*.{js,ts,tsx}\" \"*.{js,ts}\" && eslint . --fix",
         "start": "react-native start",
         "test": "jest",
         "test:watch": "jest --watch",
@@ -14,7 +14,6 @@
     "dependencies": {
         "@likashefqet/react-native-image-zoom": "^4.3.0",
         "@op-engineering/op-sqlite": "^15.2.5",
-        "@react-native-async-storage/async-storage": "~2.2.0",
         "@react-native-clipboard/clipboard": "~1.16.3",
         "@react-native-documents/picker": "~11.0.4",
         "@react-native-firebase/app": "~23.8.5",
