--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
         "start": "react-native start",
         "test": "jest",
         "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage",
-        "postinstall": "patch-package",
-        "patch": "patch-package --exclude 'android/build|android/\\.cxx'"
+        "test:coverage": "jest --coverage"
     },
     "dependencies": {
         "@likashefqet/react-native-image-zoom": "^4.3.0",
@@ -43,7 +41,7 @@
         "react-native-paper": "^5.14.5",
         "react-native-push-notification": "^8.1.1",
         "react-native-quick-base64": "^2.2.2",
-        "react-native-quick-crypto": "^1.0.11",
+        "react-native-quick-crypto": "^1.0.12",
         "react-native-reanimated": "~3.18.2",
         "react-native-safe-area-context": "~5.4.1",
         "react-native-screens": "~4.11.1",
@@ -76,7 +74,6 @@
         "babel-plugin-module-resolver": "~5.0.2",
         "eslint": "^8.19.0",
         "jest": "^30.2.0",
-        "patch-package": "^8.0.1",
         "prettier": "~2.8.8",
         "sql.js": "^1.13.0",
         "ts-jest": "^29.4.6",
