--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@react-native-firebase/app": "~23.8.6",
         "@react-native-firebase/messaging": "~23.8.6",
         "@react-native-vector-icons/material-design-icons": "~12.4.0",
+        "@react-navigation/bottom-tabs": "^7.14.0",
         "@react-navigation/drawer": "~7.7.13",
         "@react-navigation/native": "~7.1.28",
         "@react-navigation/stack": "~7.4.10",
